--- a/GerenciadorDeTarefasTests/GerenciadorDeTarefasTests.csproj
+++ b/GerenciadorDeTarefasTests/GerenciadorDeTarefasTests.csproj
@@ -16,4 +16,12 @@
         <PackageReference Include="coverlet.collector" Version="1.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Application" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\GerenciadorDeTarefas\GerenciadorDeTarefas.csproj" />
+    </ItemGroup>
+
 </Project>
